--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -10,11 +10,11 @@
             
             
             
-            <input id="accnotext" type="text" class="text" placeholder="Account number"><br><br>
+            <input id="accno" type="text" class="text" (change)="accnochange($event)" placeholder="Account number"><br><br>
             
-            <input id="pwdtext" type="password" class="text" placeholder="Password" ><br> <br>
+            <input id="pwd" type="password" class="text" (change)="pwdChange($event)" placeholder="Password" ><br> <br>
             
-            <input type="button" value="Log In" class="button butefct" onclick="login()"> <br>
+            <input type="submit" value="Log In" class="button butefct" (click)="login()"> <br>
                 <a class="textfp" href="#">Forgotten password?</a>
            <div class="line"></div>
                 <input type="button" value="Create New Account" class="button button1 butefct"> <br><br>
